# connect4game

./: CMakeLists.txt  Dockerfile  README.md
src/: main.c
